# libc_s

./: CMakeLists.txt
src/: main.c
src/libc_s/: stdio.h
src/libc_s/preamble/: stdio.h
